# truthseeker-website

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
.githooks/: pre-commit
backend/: Dockerfile  alembic.ini  main.py  reset_presets.py  worker.py
backend/api/: app.py  auth.py  chat.py  deps.py  research.py  settings.py
backend/api/schemas/: config.py
backend/core/: config.py  embedding.py  llm.py  logging.py  registry.py  security.py  session.py
backend/db/: crud.py  engine.py  migrate.py  models.py  seed.py  store.py
backend/migrations/: env.py
backend/pipeline/: constants.py  graph.py  state.py  types.py
backend/pipeline/nodes/: __init__.py  filter.py  filter_utils.py  intent.py  report.py  search_utils.py  strategy.py  summary.py
backend/pipeline/prompts/: __init__.py  filter.py  intent.py  report.py  search.py  strategy.py  verify.py
backend/search/: base.py  bocha.py  orchestrator.py  registry.py  tavily.py  zhihu.py
backend/services/: app_lifecycle.py  chat_service.py  context.py  embedding_service.py  filter_service.py  provider_service.py  research_engine.py  research_lifecycle.py  selector.py  settings_service.py
backend/services/sse/: __init__.py  consumer.py  manager.py  parser.py  processor.py
backend/tests/: conftest.py
backend/utils/: limiter.py  llm_utils.py  redis.py  retry.py
deploy/: get-cert.sh  init-ssl.sh  setup.sh
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
nginx/: default.conf
(+102 files in other folders)
