[project]
name = "truth-seeker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.16.0",
    "asyncpg>=0.31.0",
    "cachetools>=7.1.4",
    "cryptography>=48.0.0",
    "dashscope>=1.25.19",
    "fastapi>=0.136.3",
    "langchain>=1.3.2",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "langgraph-checkpoint-postgres>=3.1.0",
    "logto>=0.2.1",
    "loguru>=0.7.3",
    "numpy>=2.4.6",
    "psycopg-binary>=3.3.4",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "sqlalchemy[asyncio]>=2.0.50",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "pylint>=4.0.5",
    "pyright>=1.1.409",
    "respx>=0.23.1",
    "ruff>=0.15.15",
]
